data/derived/comb/progs/unify/prog6252.ml.out
Characters 82-86:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         ('a -> 'b) -> 'a -> 'b
